SLING-4112 Sling Models: Optimize performance when read sling models annotations
git-svn-id: https://svn.apache.org/repos/asf/sling/trunk/bundles/extensions/models/impl@1639323 13f79535-47bb-0310-9956-ffa450edef68